--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^7.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
